# MM-Companion

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT.md  README.md  mm-advantages-design.md  mm-powers-architecture.md  pyproject.toml  run.py  run_character_sheet.py  run_power_constructor.py
.claude/skills/build-installer/: SKILL.md  build_installer.py
.claude/skills/make-release/: SKILL.md  make_release.py
.claude/skills/run-mm-companion/: SKILL.md  driver.py
.github/workflows/: ci.yml  release.yml
docs/: mm-actions-adventure.md  mm-advantages-design.md  mm-conditions-design.md  mm-core-mechanics.md  mm-modifiers-ui-design.md  mm-powers-architecture.md  mm-powers-ui-design.md  mm-skills-design.md  modding-tutorial.md  modding.md  open_game_license.md  packaging.md
docs/design-data/: advantages-design.json  power-progression.json  skills-design.json
docs/sample-mods/campaign-notes/: advantages.json  blocks.json  mod.json
docs/sample-mods/flat-bonus-readouts/: effect_readouts.json  flat_bonus_mod.py  mod.json
installer/: build.ps1  mm_companion.iss  mm_companion.spec
src/mm_companion/: __init__.py  __main__.py
tests/: conftest.py  test_advantages_section.py  test_block_canvas.py  test_block_registry.py  test_block_sizes.py  test_bus.py  test_character.py  test_column_flow.py  test_complications_section.py  test_conditions.py  test_data_loader.py  test_declarative_blocks.py  test_derived_stats.py  test_dice.py  test_dice_roller.py  test_library.py  test_main_window.py  test_mod_loading.py  test_mod_manager.py  test_mods.py  test_mods_window.py  test_portable_home.py  test_power_constructor.py  test_powers.py  test_powers_section.py  test_registry.py  test_start_window.py  test_storage.py  test_system_rules.py  test_ui_wiring.py  test_wheel_guard.py
(+96 files in other folders)
